--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "Bayo",
   "icons": [
     {
-      "src": "/icons/icon-512.png",
+      "src": "/icons/icon-512b.png",
       "sizes": "512x512",
       "type": "image/png"
      },
@@ -15,7 +15,7 @@
      }],
   "start_url": "/index.html",
   "display": "standalone",
-  "background_color": "#cccccc",
-  "theme_color": "#333333"
+  "background_color": "#000000",
+  "theme_color": "#000000"
 }
  
