--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,8 @@
       "type": "image/png"
      },
     {
-      "src": "/icons/icon-36.png",
-      "sizes": "36x36",
+      "src": "/icons/_ui.gif",
+      "sizes": "149x48",
       "type": "image/png",
       "density": "0.75"
      }],
